--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,13 @@
 # arxivの学問領域の指定
-subject: 'cat:cs.*'
+subject: 'cat:astro-ph.GA'
 
 # 検索キーワード
 keywords:
-        kaggle: 3
-        resnet: 3
-        anomaly detection: 1
+        AGN: 2
+        blackhole: 1
+        stacking: 3
+        X-ray: 2
+        SMBH: 2
 
 # 通知の閾値
 score_threshold: 0
