--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,9 @@ subject: 'cat:astro-ph.GA'
 # 検索キーワード
 keywords:
         AGN: 2
-        Quiench: 2
+        quiench: 2
+        Quiescent: 2
+        SMBH: 2
         cluster: 2
         rejuvenate: 2
         stacking: 2
