--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,8 @@ keywords:
         quiench: 2
         Quiescent: 2
         SMBH: 2
+        supper massive: 2
+        black hole: 2
         cluster: 2
         rejuvenate: 2
         stacking: 2
