--- a/config.yaml
+++ b/config.yaml
@@ -5,12 +5,17 @@ subject: 'cat:astro-ph.GA'
 keywords:
         AGN: 2
         quiench: 2
+        quienching: 2
+        quienched: 2
         Quiescent: 2
         SMBH: 2
         supper massive: 2
         black hole: 2
         cluster: 2
         rejuvenate: 2
+        rejuvenating: 2
+        rejuvenated: 2
+        rejuvenation: 2
         stacking: 2
         .: 1
         
